ajustes finales de CORS